# web3-iot-sdk

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md  build.sh
.devcontainer/: devcontainer.json
component/layer/: CMakeLists.txt
component/layer/include/crypto/: psa_crypto_aead.h  psa_crypto_all.h  psa_crypto_cipher.h  psa_crypto_core.h  psa_crypto_driver_wrappers.h  psa_crypto_ecp.h  psa_crypto_hash.h  psa_crypto_invasive.h  psa_crypto_its.h  psa_crypto_mac.h  psa_crypto_random_impl.h  psa_crypto_rsa.h  psa_crypto_se.h  psa_crypto_slot_management.h  psa_crypto_storage.h
component/layer/include/example/: iotex_layer_config_default.h  iotex_layer_config_pebble.h  psa_crypto_random_impl embedtls.h  psa_crypto_random_impl iotexcrypt.h
component/layer/include/iotex/: aes.h  asn1.h  asn1write.h  bignum.h  build_info.h  camellia.h  ccm.h  chacha20.h  chachapoly.h  cipher.h  cmac.h  config_psa.h  ctr_drbg.h  des.h  ecdh.h  ecdsa.h  ecp.h  entropy.h  error.h  gcm.h  hmac_drbg.h  iotex_crypto_all.h  md.h  md5.h  oid.h  pk.h  platform.h  platform_time.h  platform_util.h  poly1305.h  psa_crypto_random_impl.h  psa_util.h  ripemd160.h  rsa.h  sha1.h  sha256.h  sha512.h
component/layer/include/svc/: crypto.h  crypto_builtin_composites.h  crypto_builtin_primitives.h  crypto_driver_common.h  crypto_driver_contexts_composites.h  crypto_driver_contexts_primitives.h  crypto_extra.h  crypto_platform.h  crypto_se_driver.h  crypto_sizes.h  crypto_struct.h  crypto_types.h
component/layer/src/: psa_crypto.c  psa_crypto_driver_wrappers.c
component/layer/src/iotex/: psa_crypto_aead.c  psa_crypto_cipher.c  psa_crypto_ecp.c  psa_crypto_hash.c  psa_crypto_mac.c  psa_crypto_rsa.c  psa_crypto_se.c  psa_crypto_slot_management.c  psa_crypto_storage.c
component/layer/src/port/: psa_crypto_porting.c
component/layer/src/sample/: psa_crypto_porting_for_mbedtls_default.c  psa_crypto_porting_for_pebble.c
doc/: W3bstream IoT SDK Release Notes.md
examples/w3bstream-client-pebble/: CMakeLists.txt  Kconfig  README.md  Step-by-step-Guide.md  prj_iotex_pebble_hw30ns.conf  sample.yaml  spm.conf
examples/w3bstream-client-pebble/configuration/iotex_pebble_hw30ns/: pm_static.yml
examples/w3bstream-client-pebble/patch/: CMakeLists.txt  CryptoCell.c
examples/w3bstream-client-pebble/src/: main.c
examples/w3bstream-client-pebble/src/modem/: modem_helper.c  modem_helper.h
examples/w3bstream-client-pebble/src/mqtt/: Kconfig  mqtt.c  mqtt.h
examples/w3bstream-client-pebble/src/nanopb/: package.options  package.pb.c  package.pb.h  package.proto  pb.h  pb_common.c  pb_common.h  pb_decode.c  pb_decode.h  pb_encode.c  pb_encode.h
examples/w3bstream-client-pebble/src/sign/: LowerS.c  ecdsa.c  ecdsa.h
examples/w3bstream-client-pebble/tools/wasm/pebble_test/: Cargo.toml
examples/w3bstream-client-pebble/tools/wasm/pebble_test/src/: lib.rs
examples/w3bstream-client-pebble/tools/wasm/pebble_test/src/protos/: package.proto
examples/w3bstream-client-rpi-http/: CMakeLists.txt  README.md  main.cpp
examples/w3bstream-client-rpi-mqtt/: CMakeLists.txt  README.md  main.cpp  package.options  package.proto
examples/w3bstream-client-rpi-mqtt/cmake/: FindMosquitto.cmake
examples/w3bstream-client-rpi-mqtt/tools/wasm/raspi_test/: Cargo.toml  Makefile  build.rs
examples/w3bstream-client-rpi-mqtt/tools/wasm/raspi_test/src/: lib.rs
examples/w3bstream-client-rpi-mqtt/tools/wasm/raspi_test/src/protos/: package.proto
test/iotex-psa/api-tests/dev_apis/crypto/test_c001/: test_c001.c
test/iotex-psa/api-tests/dev_apis/crypto/test_c021/: test_data.h
test/iotex-psa/api-tests/platform/targets/tgt_dev_apis_stdc/: target.cmake
test/iotex-psa/api-tests/val/common/: val.h
test/iotex-psa/secure-debug/: CMakeLists.txt
